tests/test_scope/bad/cyclic_scopes.catala_en
## Article

```catala
declaration scope A:
  b scope B
  context output x content integer

declaration scope B:
  a scope A
  context output y content integer

scope A:
  definition x equals b.y

scope B:
  definition y equals a.x
```

```catala-test-inline
$ catala Interpret -s A
[ERROR] Cyclic dependency detected between scopes!

Cycle variable B, declared:
 --> tests/test_scope/bad/cyclic_scopes.catala_en
  | 
8 | declaration scope B:
  |                   ^
  + Article

Used here in the definition of another cycle variable A:
 --> tests/test_scope/bad/cyclic_scopes.catala_en
  | 
5 |   b scope B
  |   ^
  + Article

Cycle variable A, declared:
 --> tests/test_scope/bad/cyclic_scopes.catala_en
  | 
4 | declaration scope A:
  |                   ^
  + Article

Used here in the definition of another cycle variable B:
 --> tests/test_scope/bad/cyclic_scopes.catala_en
  | 
9 |   a scope A
  |   ^
  + Article
#return code 255#
```
